--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "basic_banking_system",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/VanshRuhela/Banking-System",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
@@ -9,6 +10,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^3.2.2",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "react": "^17.0.2",
@@ -26,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"   
   },
   "eslintConfig": {
     "extends": [
