--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "basic_banking_system",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/VanshRuhela/Banking-System",
+  "homepage": "https://VanshRuhela.github.io/Banking-System",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
